--- a/src/components/_header.html
+++ b/src/components/_header.html
@@ -2,10 +2,17 @@
     <div class="container">
         <div class="row">
             <div class="col-6 d-flex align-items-center">
-                <a class="header__logo" target="_blank" href="#"><img src="img/MOMSEEK.SVG" alt=""> <img class="header__logo_img"
-                        src="img/WORLD.png" alt="">
-                <p class="header__logo_text">Українська</p>
-                <img class="header__logo_img-next"src="img/headerstroke.png" alt=""></a>
+                <a class="header__logo" target="_blank" href="#"><img src="img/MOMSEEK.SVG" alt=""> <img
+                        class="header__logo_img" src="img/WORLD.png" alt="">
+                    <p class="header__logo_text">Українська</p>
+                    <img class="header__logo_img-next" src="img/headerstroke.png" alt="">
+                </a>
+            </div>
+            <div class="col-6 d-flex align-items-center justify-content-end">
+                <a target="_blank" href="#" class="header__button_first">Розмістити оголошення</a> 
+                <a target="_blank" href="#" class="header__button_last">Знайти роботу</a>
+                <img class="header__img-last" src="img/headerimg.png" alt="">
+                <a class="header__text target="_blank href="#">Увійти</a>
             </div>
         </div>
     </div>
