--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -6,6 +6,7 @@ a {
     height: 100px;
     display: flex;
     align-items: center;
+    background: linear-gradient(102.5deg, #FFF6DA 0%, #FFDEF2 100%);
 
 
     &__logo {
@@ -41,12 +42,13 @@ a {
         font-size: 18px;
         color: #FFFFFF;
     }
-    &__button_last{
+
+    &__button_last {
         display: flex;
         align-items: center;
         justify-content: center;
         padding: 10px 20px 14px;
-        border: #1E3173 1px solid ;
+        border: #1E3173 1px solid;
         border-radius: 24px;
         font-weight: 600;
         font-size: 18px;
@@ -54,12 +56,14 @@ a {
         width: 180px;
         margin-left: 20px;
     }
-    &__img-last{
+
+    &__img-last {
         margin-left: 34px;
         height: 16px;
         width: 12px;
     }
-    &__text{
+
+    &__text {
         font-weight: 600;
         font-size: 18px;
         color: #000000;
