--- a/src/components/_footer.html
+++ b/src/components/_footer.html
@@ -1,5 +1,11 @@
 <footer class="footer">
-    FOOTER
+    <div class="container">
+        <div class="row">
+            <div class="col-5"><a target="_blank" href="#"><img class="footer__logo" src="img/MOMSEEKfooter.png" alt=""></a></div>
+        </div>
+    </div>
+
+    
 </footer>
 
 
