--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,4 +1,8 @@
 .footer{
-    background-color: black;
-    color: #fff;
+    margin-top: 50px;
+    background-color: #000000;
+    height: 162px;
+    &__logo{
+        margin-top: 42px;
+    }
 }
