--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -7,7 +7,7 @@
         font-size: 56px;
         color: #000000;
         line-height: 120%;
-        margin-top: 94px;
+        margin-top: 154px;
     }
 
     &__subtitle {
@@ -17,10 +17,42 @@
         line-height: 38px;
         margin-top: -50px;
     }
-    &__img{
+
+    &__img {
         display: flex;
         justify-content: end;
-        margin-top: 94px;
+        margin-top: 154px;
+    }
+
+    &__btn-first {
+        margin-top: 54px;
+        background: #ffffff;
+        border-radius: 32px;
+        padding: 20px 26px;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        font-weight: 600;
+        font-size: 18px;
+        color: #000000;
+    }
+    &__btn-next {
+        margin-top: 54px;
+        background: #ffffff;
+        border-radius: 32px;
+        padding: 20px 26px;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        font-weight: 600;
+        font-size: 18px;
+        color: #000000;
+    }
+
+    &__btn-first_img {
+        width: 16px;
+        height: 8px;
     }
 
 }
