--- a/src/components/_hero.html
+++ b/src/components/_hero.html
@@ -3,7 +3,12 @@
         <div class="row">
             <div class="col-8 hero__title">Батьки вільні, діти доглянуті</div>
             <div class="col-4 hero__img"><img src="img/video.svg" alt=""></div>
-            <div class="col-6 hero__subtitle">сервіс для пошуку нянь поблизу</div>
+            <div class="col-10 hero__subtitle">сервіс для пошуку нянь поблизу</div>
+            <div class="col-3">
+            <a class="hero__btn-first" target="_blank" href="#">Шукаю няню <img class="hero__btn-first_img" src="img/stroke.png" alt=""></a>
+            </div>
+            <div class="col-5">
+                <a class="hero__btn-next" target="_blank" href="#"> <img src="img/heromap.png" alt=""> Київ, Україна <img class="hero__btn-next_img" src="img/stroke.png" alt=""></a>
+                </div>
         </div>
     </div>
-</div>
