--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -6,7 +6,8 @@ a {
     height: 100px;
     display: flex;
     align-items: center;
-    background: linear-gradient(102.5deg, #FFF6DA 0%, #FFDEF2 100%);
+    position: fixed;
+    width: 100%;
 
 
     &__logo {
