--- a/src/components/_hero.html
+++ b/src/components/_hero.html
@@ -5,10 +5,11 @@
             <div class="col-4 hero__img"><img src="img/video.svg" alt=""></div>
             <div class="col-10 hero__subtitle">сервіс для пошуку нянь поблизу</div>
             <div class="col-3">
-            <a class="hero__btn-first" target="_blank" href="#">Шукаю няню <img class="hero__btn-first_img" src="img/stroke.png" alt=""></a>
+                <a class="hero__btn-first" target="_blank" href="#">Шукаю няню <img src="img/stroke.png" alt=""></a>
             </div>
             <div class="col-5">
-                <a class="hero__btn-next" target="_blank" href="#"> <img src="img/heromap.png" alt=""> Київ, Україна <img class="hero__btn-next_img" src="img/stroke.png" alt=""></a>
-                </div>
+                <a class="hero__btn-next" target="_blank" href="#"><img class="hero__btn-next__img"
+                        src="img/heromap.png" alt=""> Київ, Україна <img class="hero__btn-next__img-next" src="img/stroke.png" alt=""></a>
+            </div>
         </div>
     </div>
