--- a/src/components/_hero.html
+++ b/src/components/_hero.html
@@ -8,8 +8,11 @@
                 <a class="hero__btn-first" target="_blank" href="#">Шукаю няню <img src="img/stroke.png" alt=""></a>
             </div>
             <div class="col-5">
-                <a class="hero__btn-next" target="_blank" href="#"><img class="hero__btn-next__img"
-                        src="img/heromap.png" alt=""> Київ, Україна <img class="hero__btn-next__img-next" src="img/stroke.png" alt=""></a>
+                <a class="hero__btn-next" target="_blank" href="#"><span class="d-flex align-items-center"> <img class="hero__btn-next__img"
+                        src="img/heromap.png" alt=""> Київ, Україна</span> <img class="hero__btn-next__img-next" src="img/stroke.png" alt=""></a>
+            </div>
+            <div class="col-4">
+                <a class="hero__btn-last d-flex justify-content-center" target="_blank" href="#">Шукати</a>
             </div>
         </div>
     </div>
