--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -42,6 +42,7 @@
         padding: 20px 26px;
         display: flex;
         align-items: center;
+        justify-content: space-between;
         font-weight: 600;
         font-size: 18px;
         color: #000;
@@ -50,7 +51,13 @@
     &__btn-next__img{
         margin-right: 18px;
     }
-    &__btn-next__img-next{
-        margin-left: 180px;
+    &__btn-last{
+        background: #1E3173;
+border-radius: 32px;
+padding: 20px 0px;
+font-weight: 600;
+font-size: 26px;
+color: #FFFFFF;
+margin-top: 54px;
     }
 }
