--- a/src/components/_info.html
+++ b/src/components/_info.html
@@ -2,10 +2,14 @@
     <div class="row">
         <div class="col-12">
             <div class="info">
-             <div class="col-2 info__subtitle"> <p>Для батьків</p></div>
-            <div class="col-5 info__title"> <p>Як знайти няню 
-                своєї мрії </p></div>
-        </div>
+                <div class="col-2 info__subtitle">
+                    Для батьків
+                </div>
+                <div class="col-5 info__title">
+                    Як знайти няню своєї мрії
+                </div>
+            </div>
         </div>
     </div>
+</div>
 </div>
