--- a/src/sass/components/_info.scss
+++ b/src/sass/components/_info.scss
@@ -1,6 +1,6 @@
 .info {
     position: relative;
-    margin-top: 144px;
+    top: 144px;
     width: 100%;
     height: 516px;
     border-radius: 12px;
@@ -8,11 +8,11 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    padding: 37px 42px;
 
     &__subtitle {
         position: absolute;
         top: 38px;
-        left: 42px;
         font-weight: 700;
         font-size: 22px;
         color: #FFFFFF;
@@ -23,7 +23,10 @@
         font-weight: 800;
         font-size: 64px;
         color: #FFFFFF;
-        top: 120px;
-        left: 42px;
+        top: 100px;
     }
+}
+.reg{
+    display: flex;
+    justify-content: space-between;
 }
