--- a/src/sass/components/_info.scss
+++ b/src/sass/components/_info.scss
@@ -4,10 +4,10 @@
     width: 100%;
     height: 516px;
     border-radius: 12px;
-    background-image: url('../img/info_img.svg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    // background-image: url('../img/info_img.svg');
+    // background-position: center;
+    // background-repeat: no-repeat;
+    // background-size: cover;
     padding: 37px 42px;
 
     &__subtitle {
