--- a/src/components/_header.html
+++ b/src/components/_header.html
@@ -2,15 +2,22 @@
     <div class="container">
         <div class="row">
             <div class="col-4 d-flex align-items-center">
-                <a class="header__logo" target="_blank" href="#"><img src="img/MOMSEEK.SVG" alt=""> <img
-                        class="header__logo_img" src="img/WORLD.png" alt="">
+                <a class="header__logo" target="_blank" href="#">
+                    <img src="img/MOMSEEK.png" alt=""> <img class="header__logo_img" src="img/WORLD.png" alt="">
                     <p class="header__logo_text">Українська</p>
                     <img class="header__logo_img-next" src="img/headerstroke.png" alt="">
                 </a>
+                <select class="header__lang">
+                    <option value="">Укр</option>
+                </select>
             </div>
             <div class="col-8 d-flex align-items-center justify-content-end">
                 <a target="_blank" href="#" class="header__button_first">Розмістити оголошення</a>
                 <a target="_blank" href="#" class="header__button_last">Знайти роботу</a>
+                <a target="_blank" href="#" class="header__mobile-button_first"><span>+</span></a>
+                <a target="_blank" href="#" class="header__mobile-button_last">
+                    <img src="img/Vectorheader .png" alt="">
+                </a>
                 <img class="header__img-last" src="img/headerimg.png" alt="">
                 <a class="header__text target=" _blank href="#">Увійти</a>
             </div>
