--- a/src/components/_hero.html
+++ b/src/components/_hero.html
@@ -4,15 +4,15 @@
             <div class="col-8 hero__title">Батьки вільні, діти доглянуті</div>
             <div class="col-4 hero__img"><img src="img/video.svg" alt=""></div>
             <div class="col-10 hero__subtitle">сервіс для пошуку нянь поблизу</div>
-            <div class="col-3">
+            <div class="col-lg-3">
                 <a class="hero__btn-first" target="_blank" href="#">Шукаю няню <img src="img/stroke.png" alt=""></a>
             </div>
-            <div class="col-5">
+            <div class="col-lg-5">
                 <a class="hero__btn-next" target="_blank" href="#"><span class="d-flex align-items-center"> <img
                             class="hero__btn-next__img" src="img/heromap.png" alt=""> Київ, Україна</span> <img
                         class="hero__btn-next__img-next" src="img/stroke.png" alt=""></a>
             </div>
-            <div class="col-4">
+            <div class="col-lg-4">
                 <a class="hero__btn-last d-flex justify-content-center" target="_blank" href="#">Шукати</a>
             </div>
         </div>
