--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -25,6 +25,55 @@ a {
         }
     }
 
+    &__lang {
+        width: 51px;
+        height: 22px;
+        display: none;
+        background: #FFFFFF;
+        border-radius: 12px;
+        font-weight: 400;
+        font-size: 13px;
+        color: #000000;
+        border: 1px solid #FFFFFF;
+    }
+
+    &__mobile-button_first {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 28px;
+        height: 28px;
+        background: #1E3173;
+        border-radius: 24px;
+    }
+
+    &__mobile-button_first span {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-weight: 600;
+        font-size: 18px;
+        color: #FFFFFF;
+        margin-top: 5px;
+    }
+
+    &__mobile-button_last {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 28px;
+        height: 28px;
+        margin-left: 14px;
+        margin-right: -10px;
+        border: 2px solid #1E3173;
+        border-radius: 24px;
+    }
+
+    &__mobile-button_last img {
+        margin-top: 5px;
+        margin-left: 5px;
+    }
+
     &__logo_text {
         margin-left: 12px;
         font-size: 14px;
@@ -70,4 +119,66 @@ a {
         color: #000000;
         margin-left: 18px;
     }
+
+    @media screen and (max-width:992px) {
+        &__button_first {
+            display: none;
+        }
+
+        &__button_last {
+            display: none;
+        }
+
+        &__mobile-button_first {
+            display: block;
+        }
+
+        &__mobile-button_last {
+            display: block;
+        }
+
+    }
+
+    @media screen and (min-width:992px) {
+        &__mobile-button_first {
+            display: none;
+        }
+
+        &__mobile-button_last {
+            display: none;
+        }
+    }
+
+    @media screen and (max-width:768px) {
+        & {
+            height: 60px;
+        }
+
+        &__logo_img {
+            display: none;
+        }
+
+        &__logo_img-next {
+            display: none;
+        }
+
+        &__logo_text {
+            display: none;
+        }
+
+        &__lang {
+            display: block;
+            margin-left: 10px;
+        }
+
+    }
+
+    @media screen and(max-width:576px) {
+        &__logo img {
+            width: 90px;
+        }
+    }
+
+
+
 }
