--- a/src/components/_footer.html
+++ b/src/components/_footer.html
@@ -1,7 +1,19 @@
 <footer class="footer">
     <div class="container">
         <div class="row">
-            <div class="col-5"><a target="_blank" href="#"><img class="footer__logo" src="img/MOMSEEKfooter.png" alt=""></a></div>
+            <div class="col-3"><a target="_blank" href="#"><img class="footer__logo" src="img/MOMSEEKfooter.png" alt=""></a></div>
+            <div class="col-9">
+                <div class="footer__menu">
+                    <ul>
+                        <li><a href="">Контакти</a></li>
+                        <li><a href="">F.A.Q.</a></li>
+                        <li><a href="">Блог</a></li>
+                        <li><a href="">Форум</a></li>
+                        <li><a href="">Анкети нянь</a></li>
+                        <li><a href="">Оголошення про роботу</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
 
