--- a/src/components/_info.html
+++ b/src/components/_info.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
     <div class="row">
         <div class="col-12">
             <div class="info">
@@ -12,4 +12,4 @@
         </div>
     </div>
 </div>
-</div>
+</div> -->
