--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,8 +1,5 @@
 .footer{
-    margin-top: 500px;
+    margin-top: 120px;
     background-color: #000000;
-    height: 162px;
-    &__logo{
-        margin-top: 42px;
-    }
+    padding: 42px 0px 50px;
 }
