--- a/src/components/_footer.html
+++ b/src/components/_footer.html
@@ -3,14 +3,14 @@
         <div class="row">
             <div class="col-3"><a target="_blank" href="#"><img class="footer__logo" src="img/MOMSEEKfooter.png" alt=""></a></div>
             <div class="col-9">
-                <div class="footer__menu">
-                    <ul>
-                        <li><a href="">Контакти</a></li>
-                        <li><a href="">F.A.Q.</a></li>
-                        <li><a href="">Блог</a></li>
-                        <li><a href="">Форум</a></li>
-                        <li><a href="">Анкети нянь</a></li>
-                        <li><a href="">Оголошення про роботу</a></li>
+                <div class="footer__menu d-flex justify-content-end">
+                    <ul class="d-flex">
+                        <li><a target="_blank" href="#">Контакти</a></li>
+                        <li><a target="_blank" href="">F.A.Q.</a></li>
+                        <li><a target="_blank" href="">Блог</a></li>
+                        <li><a target="_blank" href="">Форум</a></li>
+                        <li><a target="_blank" href="">Анкети нянь</a></li>
+                        <li><a target="_blank"href="">Оголошення про роботу</a></li>
                     </ul>
                 </div>
             </div>
