--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -5,21 +5,83 @@
 
     &__menu {
         ul {
+            display: flex;
 
             li {
                 list-style: none;
-                padding: 0px 21px;
+                margin: 0px 21px;
+
+                a {
+                    font-weight: 400;
+                    font-size: 16px;
+                    color: #FFFFFF;
+                }
             }
 
-            a {
-                font-weight: 400;
-                font-size: 16px;
-                color: #FFFFFF;
-
-            }
             :last-child {
-                padding-right: 0;
+                margin-right: 0px;
             }
         }
+    }
+
+    &__text {
+        font-weight: 400;
+        font-size: 16px;
+        color: #FFFFFF;
+        margin-top: 14px;
+        order: 1;
+    }
+
+    &__info {
+        display: flex;
+        align-items: center;
+        justify-content: end;
+        order: 2;
+
+        &_text {
+            font-weight: 400;
+            font-size: 14px;
+            color: #FFFFFF;
+            margin: 0px 10px;
+        }
+    }
+
+    @media screen and (max-width: 1200px) {
+        ul {
+            li {
+                list-style: none;
+                margin: 0px 10px;
+            }
+        }
+    }
+    @media screen and (max-width: 996px) {
+        ul {
+            display: block;
+        }
+        li{
+            padding: 16px 0px;
+            text-align: center;
+        }
+        &__logo{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: 0px 0px 8px;
+        }
+        &__menu{
+            margin: 0 auto;
+        }
+        &__text {
+            order: 2;
+            display: flex;
+            justify-content: center;
+            margin: 0;
+        }
+        &__info{
+            order: 1;
+            display: flex;
+            justify-content: center;
+        }
+        
     }
 }
