--- a/src/components/_footer.html
+++ b/src/components/_footer.html
@@ -1,23 +1,32 @@
 <footer class="footer">
     <div class="container">
         <div class="row">
-            <div class="col-3"><a target="_blank" href="#"><img class="footer__logo" src="img/MOMSEEKfooter.png" alt=""></a></div>
-            <div class="col-9">
-                <div class="footer__menu d-flex justify-content-end">
-                    <ul class="d-flex">
+            <div class="col-md-12 footer__logo col-lg-3 p-0"><a target="_blank" href="#"><img class="footer__logo" src="img/MOMSEEKfooter.png"
+                        alt=""></a></div>
+            <div class="col-md-12 footer__menu col-lg-9 d-flex align-items-center justify-content-end">
+                <div class="footer__menu">
+                    <ul>
                         <li><a target="_blank" href="#">Контакти</a></li>
-                        <li><a target="_blank" href="">F.A.Q.</a></li>
-                        <li><a target="_blank" href="">Блог</a></li>
-                        <li><a target="_blank" href="">Форум</a></li>
-                        <li><a target="_blank" href="">Анкети нянь</a></li>
-                        <li><a target="_blank"href="">Оголошення про роботу</a></li>
+                        <li><a target="_blank" href="#">F.A.Q.</a></li>
+                        <li><a target="_blank" href="#">Блог</a></li>
+                        <li><a target="_blank" href="#">Форум</a></li>
+                        <li><a target="_blank" href="#">Анкети нянь</a></li>
+                        <li><a target="_blank" href="#">Оголошення про роботу</a></li>
                     </ul>
                 </div>
+            </div>
+            <div class="col-md-12 col-lg-4 ps-0 mt-3">
+                <span class="footer__text">© 2022 сервіс для пошуку нянь поблизу</span>
+            </div>
+            <div class="col-md-12 col-lg-8 mt-3">
+                <span class="footer__info">
+                    <img src="img/footerimg.png" alt="">
+                    <p class="footer__info_text">Українська</p>
+                    <img src="img/footerstroke.png" alt="">
+                </span>
             </div>
         </div>
     </div>
 
-    
+
 </footer>
-
-
