--- a/src/components/_footer.html
+++ b/src/components/_footer.html
@@ -1,8 +1,8 @@
 <footer class="footer">
     <div class="container">
         <div class="row">
-            <div class="col-md-12 footer__logo col-lg-3 p-0"><a target="_blank" href="#"><img class="footer__logo" src="img/MOMSEEKfooter.png"
-                        alt=""></a></div>
+            <div class="col-md-12 footer__logo col-lg-3 p-0"><a target="_blank" href="#"><img class="footer__logo"
+                        src="img/MOMSEEKfooter.png" alt=""></a></div>
             <div class="col-md-12 footer__menu col-lg-9 d-flex align-items-center justify-content-end">
                 <div class="footer__menu">
                     <ul>
@@ -15,10 +15,10 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-md-12 col-lg-4 ps-0 mt-3">
+            <div class="col-md-12 col-lg-4 ps-0 mt-3 footer__text">
                 <span class="footer__text">© 2022 сервіс для пошуку нянь поблизу</span>
             </div>
-            <div class="col-md-12 col-lg-8 mt-3">
+            <div class="col-md-12 col-lg-8 mt-3 footer__info">
                 <span class="footer__info">
                     <img src="img/footerimg.png" alt="">
                     <p class="footer__info_text">Українська</p>
