--- a/src/components/_info.html
+++ b/src/components/_info.html
@@ -1,4 +1,4 @@
-<!-- <div class="container">
+<div class="container">
     <div class="row">
         <div class="col-12">
             <div class="info">
@@ -9,7 +9,40 @@
                     Як знайти няню своєї мрії
                 </div>
             </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="info__item">
+                            <div class="col-4"><a class="info__item_first" target="_blank" href="#">
+                                    <span class="d-flex">
+                                        <p class="info__item_first-title">Розмістіть ваше <br>
+                                            оголошення</p>
+                                        <img class="info__item_first-img" src="img/Vectorinfo.png" alt="">
+                                    </span>
+                                    <p class="info__item_first-subtitle">Розкажіть саме про ваші потреби та <br>
+                                        завдання</p>
+                                </a></div>
+                            <div class="col-4"><a target="_blank" href="#"><span class="d-flex">
+                                        <p class="info__item_first-title">Розмістіть ваше <br>
+                                            оголошення</p>
+                                        <div class="info__item_first-img"></div>
+                                    </span>
+                                    <p class="info__item_first-subtitle">Розкажіть саме про ваші потреби та <br>
+                                        завдання</p>
+                                </a></div>
+                            <div class="col-4"><a target="_blank" href="#"><span class="d-flex">
+                                        <p class="info__item_first-title">Розмістіть ваше <br>
+                                            оголошення</p>
+                                        <img class="info__item_first-img" src="img/Vectorinfo.png" alt="">
+                                    </span>
+                                    <p class="info__item_first-subtitle">Розкажіть саме про ваші потреби та <br>
+                                        завдання</p>
+                                </a></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
-</div> -->
+</div>
