--- a/src/sass/components/_info.scss
+++ b/src/sass/components/_info.scss
@@ -1,18 +1,19 @@
 .info {
     position: relative;
-    top: 144px;
-    width: 100%;
-    height: 516px;
+    top: 124px;
+    padding: 40px 40px 20px;
+    height: 520px;
+    max-width: 100%;
+    min-width: 100%;
     border-radius: 12px;
-    // background-image: url('../img/info_img.svg');
-    // background-position: center;
-    // background-repeat: no-repeat;
-    // background-size: cover;
+    background-image: url('../img/infoimg.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     padding: 37px 42px;
 
     &__subtitle {
         position: absolute;
-        top: 38px;
         font-weight: 700;
         font-size: 22px;
         color: #FFFFFF;
@@ -23,10 +24,55 @@
         font-weight: 800;
         font-size: 64px;
         color: #FFFFFF;
-        top: 100px;
+        margin-top: 58px;
+    }
+
+    &__item {
+        display: flex;
+
+        &_first {
+            position: absolute;
+            padding: 18px 33px 22px 22px;
+            background: #1E3173;
+            border-radius: 12px;
+            color: #FFFFFF;
+            transition: 0.5s all;
+
+            &-title {
+                font-weight: 800;
+                font-size: 24px;
+                margin-bottom: 18px;
+            }
+
+            &-subtitle {
+                font-weight: 400;
+                font-size: 16px;
+            }
+
+            &-img {
+                position: absolute;
+                margin-left: 85%;
+                background-image: url('../img/Vectorinfo.png');
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: cover;
+            }
+        }
+
+        :hover {
+            background: #FFFFFF;
+            color: #1E3173;
+            transition: 0.5s all;
+        }
     }
 }
-.reg{
-    display: flex;
-    justify-content: space-between;
-}
+
+// :hover{
+//     position: absolute;
+//     margin-left: 85%;
+//     background-image: url('../img/Vectorinfo1.png');
+//     background-position: center;
+//     background-repeat: no-repeat;
+//     background-size: cover;
+
+// }
