--- a/src/components/_info.html
+++ b/src/components/_info.html
@@ -21,23 +21,24 @@
                                     </span>
                                     <p class="info__item_first-subtitle">Розкажіть саме про ваші потреби та <br>
                                         завдання</p>
-                                </a></div>
-                            <div class="col-4"><a target="_blank" href="#"><span class="d-flex">
-                                        <p class="info__item_first-title">Розмістіть ваше <br>
-                                            оголошення</p>
-                                        <div class="info__item_first-img"></div>
-                                    </span>
-                                    <p class="info__item_first-subtitle">Розкажіть саме про ваші потреби та <br>
-                                        завдання</p>
-                                </a></div>
-                            <div class="col-4"><a target="_blank" href="#"><span class="d-flex">
-                                        <p class="info__item_first-title">Розмістіть ваше <br>
-                                            оголошення</p>
-                                        <img class="info__item_first-img" src="img/Vectorinfo.png" alt="">
-                                    </span>
-                                    <p class="info__item_first-subtitle">Розкажіть саме про ваші потреби та <br>
-                                        завдання</p>
-                                </a></div>
+                                </a>
+                            </div>
+                            <div class="col-4"><a class="info__item_first" target="_blank" href="#">
+                                <span class="d-flex">
+                                    <p class="info__item_first-title">Перегляньте анкети <br> нянь поблизу</p>
+                                    <img class="info__item_first-img" src="img/Vectorinfo.png" alt="">
+                                </span>
+                                <p class="info__item_first-subtitle">та проведіть співбесіду з тими хто <br> відповідає вашим вимогам </p>
+                            </a>
+                        </div>
+                        <div class="col-4"><a class="info__item_first" target="_blank" href="#">
+                            <span class="d-flex">
+                                <p class="info__item_first-title">Найміть свою ідеальну <br> няню</p>
+                                <img class="info__item_first-img" src="img/Vectorinfo.png" alt="">
+                            </span>
+                            <p class="info__item_first-subtitle">Обговоріть деталі, сформуйте договір <br> прямо на  сайті</p>
+                        </a>
+                    </div>
                         </div>
                     </div>
                 </div>
