--- a/src/components/_info.html
+++ b/src/components/_info.html
@@ -8,38 +8,30 @@
                 <div class="col-5 info__title">
                     Як знайти няню своєї мрії
                 </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-12">
-                        <div class="info__item">
-                            <div class="col-4"><a class="info__item_first" target="_blank" href="#">
-                                    <span class="d-flex">
-                                        <p class="info__item_first-title">Розмістіть ваше <br>
-                                            оголошення</p>
-                                        <img class="info__item_first-img" src="img/Vectorinfo.png" alt="">
-                                    </span>
-                                    <p class="info__item_first-subtitle">Розкажіть саме про ваші потреби та <br>
-                                        завдання</p>
-                                </a>
-                            </div>
-                            <div class="col-4"><a class="info__item_first" target="_blank" href="#">
-                                <span class="d-flex">
-                                    <p class="info__item_first-title">Перегляньте анкети <br> нянь поблизу</p>
-                                    <img class="info__item_first-img" src="img/Vectorinfo.png" alt="">
-                                </span>
-                                <p class="info__item_first-subtitle">та проведіть співбесіду з тими хто <br> відповідає вашим вимогам </p>
-                            </a>
-                        </div>
-                        <div class="col-4"><a class="info__item_first" target="_blank" href="#">
-                            <span class="d-flex">
-                                <p class="info__item_first-title">Найміть свою ідеальну <br> няню</p>
-                                <img class="info__item_first-img" src="img/Vectorinfo.png" alt="">
-                            </span>
-                            <p class="info__item_first-subtitle">Обговоріть деталі, сформуйте договір <br> прямо на  сайті</p>
-                        </a>
+                <div class="info__items ">
+                    <div class="col-4 info__items_item">
+                        <span class="d-flex justify-content-between m-0">
+                            <p class="info__items_item-title">Розмістіть ваше <br>
+                                оголошення</p>
+                            <img class="info__items_item-img" src="img/Vectorinfo.png" alt="">
+                        </span>
+                        <p class="info__items_item-subtitle">Розкажіть саме про ваші потреби та <br> завдання</p>
                     </div>
-                        </div>
+                    <div class="col-4 info__items_item">
+                        <span class="d-flex justify-content-between m-0">
+                            <p class="info__items_item-title">Перегляньте анкети <br> нянь поблизу</p>
+                            <img class="info__items_item-img" src="img/Vectorinfo.png" alt="">
+                        </span>
+                        <p class="info__items_item-subtitle">та проведіть співбесіду з тими хто <br> відповідає вашим
+                            вимогам </p>
+                    </div>
+                    <div class="col-4 info__items_item">
+                        <span class="d-flex justify-content-between m-0">
+                            <p class="info__items_item-title">Найміть свою ідеальну <br> няню</p>
+                            <img class="info__items_item-img" src="img/Vectorinfo.png" alt="">
+                        </span>
+                        <p class="info__items_item-subtitle">Обговоріть деталі, сформуйте договір <br> прямо на сайті
+                        </p>
                     </div>
                 </div>
             </div>
