--- a/src/components/_info.html
+++ b/src/components/_info.html
@@ -9,30 +9,30 @@
                     Як знайти няню своєї мрії
                 </div>
                 <div class="info__items ">
-                    <div class="col-4 info__items_item">
+                    <a target="_blank" href="#" class="col-4 info__items_item">
                         <span class="d-flex justify-content-between m-0">
                             <p class="info__items_item-title">Розмістіть ваше <br>
                                 оголошення</p>
                             <img class="info__items_item-img" src="img/Vectorinfo.png" alt="">
                         </span>
                         <p class="info__items_item-subtitle">Розкажіть саме про ваші потреби та <br> завдання</p>
-                    </div>
-                    <div class="col-4 info__items_item">
+                    </a>
+                    <a target="_blank" href="#" class="col-4 info__items_item">
                         <span class="d-flex justify-content-between m-0">
                             <p class="info__items_item-title">Перегляньте анкети <br> нянь поблизу</p>
                             <img class="info__items_item-img" src="img/Vectorinfo.png" alt="">
                         </span>
                         <p class="info__items_item-subtitle">та проведіть співбесіду з тими хто <br> відповідає вашим
                             вимогам </p>
-                    </div>
-                    <div class="col-4 info__items_item">
+                    </a>
+                    <a target="_blank" href="#" class="col-4 info__items_item">
                         <span class="d-flex justify-content-between m-0">
                             <p class="info__items_item-title">Найміть свою ідеальну <br> няню</p>
                             <img class="info__items_item-img" src="img/Vectorinfo.png" alt="">
                         </span>
                         <p class="info__items_item-subtitle">Обговоріть деталі, сформуйте договір <br> прямо на сайті
                         </p>
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
