--- a/src/components/_info.html
+++ b/src/components/_info.html
@@ -1,3 +1,4 @@
+<div class="size">
 <div class="container">
     <div class="row">
         <div class="col-12">
@@ -37,5 +38,6 @@
             </div>
         </div>
     </div>
+</div>
 </div>
 </div>
