--- a/src/components/_info.html
+++ b/src/components/_info.html
@@ -1,43 +1,45 @@
 <div class="size">
-<div class="container">
-    <div class="row">
-        <div class="col-12">
-            <div class="info">
-                <div class="col-md-12 col-lg-2 info__subtitle">
-                    Для батьків
-                </div>
-                <div class="col-md-7 col-lg-5 info__title">
-                    Як знайти няню своєї мрії
-                </div>
-                <div class="info__items ">
-                    <a target="_blank" href="#" class="col-sm-12 col-md-4 info__items_item">
-                        <span class="d-flex justify-content-between m-0">
-                            <p class="info__items_item-title">Розмістіть ваше <br>
-                                оголошення</p>
-                            <img class="info__items_item-img" src="img/Vectorinfo.png" alt="">
-                        </span>
-                        <p class="info__items_item-subtitle">Розкажіть саме про ваші потреби та <br> завдання</p>
-                    </a>
-                    <a target="_blank" href="#" class="col-sm-12 col-md-4 info__items_item">
-                        <span class="d-flex justify-content-between m-0">
-                            <p class="info__items_item-title">Перегляньте анкети <br> нянь поблизу</p>
-                            <img class="info__items_item-img" src="img/Vectorinfo.png" alt="">
-                        </span>
-                        <p class="info__items_item-subtitle">та проведіть співбесіду з тими хто <br> відповідає вашим
-                            вимогам </p>
-                    </a>
-                    <a target="_blank" href="#" class="col-sm-12 col-md-4 info__items_item">
-                        <span class="d-flex justify-content-between m-0">
-                            <p class="info__items_item-title">Найміть свою ідеальну <br> няню</p>
-                            <img class="info__items_item-img" src="img/Vectorinfo.png" alt="">
-                        </span>
-                        <p class="info__items_item-subtitle">Обговоріть деталі, сформуйте договір <br> прямо на сайті
-                        </p>
-                    </a>
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="info">
+                    <div class="col-md-12 col-lg-2 info__subtitle">
+                        Для батьків
+                    </div>
+                    <div class="col-md-7 col-lg-5 info__title">
+                        Як знайти няню своєї мрії
+                    </div>
+                    <div class="info__items ">
+                        <a target="_blank" href="#" class="col-sm-12 col-md-4 info__items_item">
+                            <span class="d-flex justify-content-between m-0">
+                                <p class="info__items_item-title">Розмістіть ваше <br>
+                                    оголошення</p>
+                                <img class="info__items_item-img" src="img/Vectorinfo.png" alt="">
+                            </span>
+                            <p class="info__items_item-subtitle">Розкажіть саме про ваші потреби та <br> завдання</p>
+                        </a>
+                        <a target="_blank" href="#" class="col-sm-12 col-md-4 info__items_item">
+                            <span class="d-flex justify-content-between m-0">
+                                <p class="info__items_item-title">Перегляньте анкети <br> нянь поблизу</p>
+                                <img class="info__items_item-img" src="img/Vectorinfo.png" alt="">
+                            </span>
+                            <p class="info__items_item-subtitle">та проведіть співбесіду з тими хто <br> відповідає
+                                вашим
+                                вимогам </p>
+                        </a>
+                        <a target="_blank" href="#" class="col-sm-12 col-md-4 info__items_item">
+                            <span class="d-flex justify-content-between m-0">
+                                <p class="info__items_item-title">Найміть свою ідеальну <br> няню</p>
+                                <img class="info__items_item-img" src="img/Vectorinfo.png" alt="">
+                            </span>
+                            <p class="info__items_item-subtitle">Обговоріть деталі, сформуйте договір <br> прямо на
+                                сайті
+                            </p>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 </div>
 </div>
