--- a/src/sass/components/_info.scss
+++ b/src/sass/components/_info.scss
@@ -142,7 +142,8 @@
 
                 :hover {
                     background: #774FA4;
-                    color: #FFFFFF;;
+                    color: #FFFFFF;
+                    ;
                     transition: 0.5s all;
                 }
 
