--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,6 +10,7 @@
 @import "components/header";
 @import "components/hero";
 @import "components/info";
+@import "components/baner";
 @import "components/footer";
 
 body{
