--- a/src/components/_baner.html
+++ b/src/components/_baner.html
@@ -3,9 +3,38 @@
         <div class="row">
             <div class="col-12">
                 <div class="baner">
-                <div class="baner__rect"></div>
-                <div class="baner__img"></div>
-            </div>
+                    <p class="baner__subtitle">Для нянь</p>
+                    <p class="baner__title">Як знайти роботу <br>
+                        професійною нянею </p>
+                    <div class="baner__items ">
+                        <a target="_blank" href="#" class="col-sm-12 col-md-4 baner__items_item">
+                            <span class="d-flex justify-content-between m-0">
+                                <p class="baner__items_item-title">Розмістіть ваше <br>
+                                    оголошення</p>
+                                <img class="baner__items_item-img" src="img/Vectorinfo.png" alt="">
+                            </span>
+                            <p class="baner__items_item-subtitle">Розкажіть саме про ваші потреби та <br> завдання</p>
+                        </a>
+                        <a target="_blank" href="#" class="col-sm-12 col-md-4 baner__items_item">
+                            <span class="d-flex justify-content-between m-0">
+                                <p class="baner__items_item-title">Перегляньте анкети <br> нянь поблизу</p>
+                                <img class="baner__items_item-img" src="img/Vectorinfo.png" alt="">
+                            </span>
+                            <p class="baner__items_item-subtitle">та проведіть співбесіду з тими хто <br> відповідає
+                                вашим
+                                вимогам </p>
+                        </a>
+                        <a target="_blank" href="#" class="col-sm-12 col-md-4 baner__items_item">
+                            <span class="d-flex justify-content-between m-0">
+                                <p class="baner__items_item-title">Найміть свою ідеальну <br> няню</p>
+                                <img class="baner__items_item-img" src="img/Vectorinfo.png" alt="">
+                            </span>
+                            <p class="baner__items_item-subtitle">Обговоріть деталі, сформуйте договір <br> прямо на
+                                сайті
+                            </p>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
